[package]
name = "proto-bubble"
version = "0.1.0"
edition = "2021"
description = "Protocol parser for bubble-shooter style games. Plug-in for gamereel-core via inventory::submit!."

[dependencies]
gamereel-core = { path = "../gamereel-core" }
inventory     = { workspace = true }
serde_json    = { workspace = true }
