[package]
name = "proto-puzzle"
version = "0.1.0"
edition = "2021"
description = "Protocol parser for puzzle-style games (block-matching, falling pieces). Plug-in for gamereel-core via inventory::submit!."

[dependencies]
gamereel-core = { path = "../gamereel-core" }
inventory     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
